[package]
name = "day19a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["fs", "rt", "rt-multi-thread", "macros", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "fs"] }
