[package]
name = "day1b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
day1a = { path = "../day1a" }

tokio = { version = "1.34.0", features = ["fs", "rt", "rt-multi-thread", "macros", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "fs"] }
log = "0.4.20"
lazy_static = "1.4.0"
