[package]
name = "day20b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["fs", "rt", "rt-multi-thread", "macros", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["io-util", "fs"] }
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
futures = "0.3.29"
async-recursion = "1.0.5"
regex = "1.10.2"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
petgraph = { version = "0.6.4", features = [] }
log = "0.4.20"
env_logger = "0.10.1"
